Did some updates!

--- a/pages/songs/InterruptSwitch.mdx
+++ b/pages/songs/InterruptSwitch.mdx
@@ -4,14 +4,30 @@
 
 <div class="grid grid-rows-1 grid-flow-col gap-4">
   <div class="row-span-3 gap-2">
-    <img src="https://mj-gallery.com/dbc6b847-35f6-4231-9925-934d08fa00c7/grid_0.png" />
+    <img src="https://mj-gallery.com/4b3a3c20-41ba-493f-8f01-24a8d90089e9/grid_0.png" />
     <img
       className="mt-4"
-      src="https://mj-gallery.com/7e25c002-dc37-463d-9568-8fd00f334d62/grid_0.png"
+      src="https://mj-gallery.com/57b45fe7-32c6-4523-a423-83aa43da5a9f/grid_0.png"
     />
+
+    <img
+      className="mt-4"
+      src="https://mj-gallery.com/18f0db30-234f-4be1-8034-e53260564b3e/grid_0.png"
+    />
+
+    <img
+      className="mt-4"
+      src="https://mj-gallery.com/a8801d1b-d57c-4285-ab93-2977defedfbd/grid_0.png"
+    />
+
+    <img
+      className="mt-4"
+      src="https://mj-gallery.com/6b430700-81c2-462f-a19f-5843a77242b8/grid_0.png"
+    />
+
   </div>
   <div class="col-span-2 ...">
-    <img src="https://mj-gallery.com/a24f1cd0-bd09-4c9a-9af0-4df31bbf2f6f/grid_0.png" />
+    <img src="https://mj-gallery.com/82e74199-e9f4-49cb-ba28-c20378a0ac2f/grid_0.png" />
   </div>
   <div>I wanted this song to be not lame. So I hope it's not lame. Yay.</div>
 </div>
