--- a/pages/songs/BecauseItWasHard.mdx
+++ b/pages/songs/BecauseItWasHard.mdx
@@ -4,14 +4,19 @@
 
 <div class="grid grid-rows-1 grid-flow-col gap-4">
   <div class="row-span-3 gap-2">
-    <img src="https://mj-gallery.com/dbc6b847-35f6-4231-9925-934d08fa00c7/grid_0.png" />
+    <img src="https://mj-gallery.com/873fd2eb-03f1-45e4-8155-2b442d23d741/grid_0.png" />
     <img
       className="mt-4"
-      src="https://mj-gallery.com/7e25c002-dc37-463d-9568-8fd00f334d62/grid_0.png"
+      src="https://mj-gallery.com/02f75c24-f3eb-470f-9094-53851f403d9f/grid_0.png"
+    />
+
+    <img
+      className="mt-4"
+      src="https://mj-gallery.com/eb8093e7-e5f2-4188-bd81-7dd826bf952b/grid_0.png"
     />
   </div>
   <div class="col-span-2 ...">
-    <img src="https://mj-gallery.com/a24f1cd0-bd09-4c9a-9af0-4df31bbf2f6f/grid_0.png" />
+    <img src="https://mj-gallery.com/57e2dec9-af84-40db-b646-66aa82c5f71d/grid_0.png" />
   </div>
   <div>I wanted this song to be not lame. So I hope it's not lame. Yay.</div>
 </div>
