--- a/pages/songs/DestroyedAndroid.mdx
+++ b/pages/songs/DestroyedAndroid.mdx
@@ -4,14 +4,20 @@
 
 <div class="grid grid-rows-1 grid-flow-col gap-4">
   <div class="row-span-3 gap-2">
-    <img src="https://mj-gallery.com/dbc6b847-35f6-4231-9925-934d08fa00c7/grid_0.png" />
+    <img src="https://mj-gallery.com/4a23a215-24b9-4ea9-8d0b-24c4f55e84fc/grid_0.png" />
     <img
       className="mt-4"
-      src="https://mj-gallery.com/7e25c002-dc37-463d-9568-8fd00f334d62/grid_0.png"
+      src="https://mj-gallery.com/a7239260-de24-4aea-a8ec-12cc9d510446/grid_0.png"
     />
+
+    <img
+      className="mt-4"
+      src="https://mj-gallery.com/47739e6f-7466-4bd2-ae9a-b96272e2db3f/grid_0.png"
+    />
+
   </div>
   <div class="col-span-2 ...">
-    <img src="https://mj-gallery.com/a24f1cd0-bd09-4c9a-9af0-4df31bbf2f6f/grid_0.png" />
+    <img src="https://mj-gallery.com/acf83a2d-e311-4bf6-b552-20360c11f0f5/grid_0.png" />
   </div>
   <div>I wanted this song to be not lame. So I hope it's not lame. Yay.</div>
 </div>
