Next iteration of the page

--- a/pages/songs/ARitualBetweenLightAndDark.mdx
+++ b/pages/songs/ARitualBetweenLightAndDark.mdx
@@ -15,7 +15,7 @@
   <div class="col-span-2 ...">
     <img src="https://mj-gallery.com/50c8ada1-4a9e-41da-9a27-947020225e21/grid_0.png" />
   </div>
-  <div>I wanted this song to be not lame. So I hope it's not lame. Yay.</div>
+  <div className="text-white">Lisa’s theory is that the machines are good at seeing trends and analysing information, so she needs to do something unexpected to fight back.</div>
 </div>
 
 </div>
