--- a/pages/songs/Escalation.mdx
+++ b/pages/songs/Escalation.mdx
@@ -13,7 +13,7 @@
   <div class="col-span-2 ...">
     <img src="https://mj-gallery.com/2faae02c-7933-4ab9-8829-cb755eab6bb9/grid_0.png" />
   </div>
-  <div>I wanted this song to be not lame. So I hope it's not lame. Yay.</div>
+  <div>As things get worse and worse, Lisa finds a way to overload a weapon with archival data that has never been seen on the internet before. Lisa gets her friends to launch the weapon. But she’s also uploading her consciousness into the upload, where she’ll be able to attack the robot from the inside.</div>
 </div>
 
 </div>
