--- a/pages/songs/GrabASeat.mdx
+++ b/pages/songs/GrabASeat.mdx
@@ -13,7 +13,7 @@
   <div class="col-span-2 ...">
     <img src="https://mj-gallery.com/a24f1cd0-bd09-4c9a-9af0-4df31bbf2f6f/grid_0.png" />
   </div>
-  <div>I wanted this song to be not lame. So I hope it's not lame. Yay.</div>
+  <div className="text-white">After a long day at work, Lisa hangs out on Discord with a collection of her internet friends. Chatting about the news, their jobs, swapping some music recommendations.</div>
 </div>
 
 </div>
