--- a/pages/songs/IfRobotsHadLungs.mdx
+++ b/pages/songs/IfRobotsHadLungs.mdx
@@ -13,7 +13,7 @@
   <div class="col-span-2 ...">
     <img src="https://mj-gallery.com/597fb39b-36bf-4869-baa5-e74ef8c203ce/grid_0.png" />
   </div>
-  <div>I wanted this song to be not lame. So I hope it's not lame. Yay.</div>
+  <div className="text-white">While Lisa studies up, the robots destroy everything. Block by block, they’re destroying everything. Online access is coming back in fits and starts, but everything discussed is seemingly helping the robots. All plans are cut off immediately. Humanity is doomed.</div>
 </div>
 
 </div>
