--- a/pages/songs/SomethingsUp.mdx
+++ b/pages/songs/SomethingsUp.mdx
@@ -11,9 +11,9 @@
     />
   </div>
   <div class="col-span-2 ...">
-    <img src="https://mj-gallery.com/9ad02ca6-8eb4-4383-8ed8-26503d2f51cc/grid_0.png" />
+    <img src="https://mj-gallery.com/160320c8-4b44-4c88-b980-d03ca0bac4af/grid_0.png" />
   </div>
-  <div>I wanted this song to be not lame. So I hope it's not lame. Yay.</div>
+  <div>She has a little website with some forum software. She’s able to connect to it and send an SOS. After a few minutes, she gets a response.</div>
 </div>
 
 </div>
