--- a/pages/songs/SwaggeringTowardsTheThreat.mdx
+++ b/pages/songs/SwaggeringTowardsTheThreat.mdx
@@ -15,7 +15,7 @@
   <div class="col-span-2 ...">
     <img src="https://mj-gallery.com/0d478f75-8e24-45de-a26f-16603827b08d/grid_0.png" />
   </div>
-  <div>I wanted this song to be not lame. So I hope it's not lame. Yay.</div>
+  <div>Reports are coming in that there’s a large militarized robot approaching, and it’s jamming the whole internet. It’s terrifying, but also pretty exciting. What is it?</div>
 </div>
 
 </div>
