--- a/pages/songs/TakeTheTunnel.mdx
+++ b/pages/songs/TakeTheTunnel.mdx
@@ -7,13 +7,13 @@
     <img src="https://mj-gallery.com/dbc6b847-35f6-4231-9925-934d08fa00c7/grid_0.png" />
     <img
       className="mt-4"
-      src="https://mj-gallery.com/7e25c002-dc37-463d-9568-8fd00f334d62/grid_0.png"
+      src="https://mj-gallery.com/46936e28-7787-4b9c-bca5-3bcb33758a45/grid_0.png"
     />
   </div>
   <div class="col-span-2 ...">
-    <img src="https://mj-gallery.com/a24f1cd0-bd09-4c9a-9af0-4df31bbf2f6f/grid_0.png" />
+    <img src="https://mj-gallery.com/ecf9100a-56e7-4a89-b6ed-998591cc6bda/grid_0.png" />
   </div>
-  <div>I wanted this song to be not lame. So I hope it's not lame. Yay.</div>
+  <div className="text-white">Lisa left us some final thoughts and ideas. Look to the past. Stand on the shoulders of giants. Reinvention is better when you understand where you came from. PS check the NASA archives. It’s mostly not online.</div>
 </div>
 
 </div>
