--- a/pages/songs/BecauseItWasHard.mdx
+++ b/pages/songs/BecauseItWasHard.mdx
@@ -18,7 +18,7 @@
   <div class="col-span-2 ...">
     <img src="https://mj-gallery.com/57e2dec9-af84-40db-b646-66aa82c5f71d/grid_0.png" />
   </div>
-  <div>I wanted this song to be not lame. So I hope it's not lame. Yay.</div>
+  <div className="text-blue-200">Chatting online, one of Lisa’s friends points out that concept of “effort justification” explains why hard things can actually feel good. After all, we went to the moon not because it was easy, but because it was hard.</div>
 </div>
 
 </div>
