--- a/pages/songs/DestroyedAndroid.mdx
+++ b/pages/songs/DestroyedAndroid.mdx
@@ -19,7 +19,7 @@
   <div class="col-span-2 ...">
     <img src="https://mj-gallery.com/acf83a2d-e311-4bf6-b552-20360c11f0f5/grid_0.png" />
   </div>
-  <div>I wanted this song to be not lame. So I hope it's not lame. Yay.</div>
+  <div>Lisa finds herself sucked into the robot and does battle from the inside. The robot is clearly confused by the onslaught of contradictory data, but more importantly Lisa finds a way to fight the robot from the inside.</div>
 </div>
 
 </div>
