--- a/pages/songs/DroppingDownIntoTheSky.mdx
+++ b/pages/songs/DroppingDownIntoTheSky.mdx
@@ -5,17 +5,10 @@
 </h2>
 
 <div class="grid grid-rows-1 grid-flow-col gap-4">
-  <div class="row-span-3 gap-2">
-    <img src="https://mj-gallery.com/dbc6b847-35f6-4231-9925-934d08fa00c7/grid_0.png" />
-    <img
-      className="mt-4"
-      src="https://mj-gallery.com/7e25c002-dc37-463d-9568-8fd00f334d62/grid_0.png"
-    />
+  <div class="col-span-1 ...">
+    <img src="https://mj-gallery.com/9067993c-8b43-4e46-8d58-4dd436dafa61/grid_0.png" />
   </div>
-  <div class="col-span-2 ...">
-    <img src="https://mj-gallery.com/a24f1cd0-bd09-4c9a-9af0-4df31bbf2f6f/grid_0.png" />
-  </div>
-  <div>I wanted this song to be not lame. So I hope it's not lame. Yay.</div>
+  <div className="text-white">Postscript: humanity undertook a huge project to archive past data better and document it for future generations. From it, we gained a lot of new ideas for how to push things forward, including around space exploration.</div>
 </div>
 
 </div>
