--- a/pages/songs/F12.mdx
+++ b/pages/songs/F12.mdx
@@ -4,16 +4,16 @@
 
 <div class="grid grid-rows-1 grid-flow-col gap-4">
   <div class="row-span-3 gap-2">
-    <img src="https://mj-gallery.com/dbc6b847-35f6-4231-9925-934d08fa00c7/grid_0.png" />
+    <img src="https://mj-gallery.com/83c0c1a4-a45d-4601-9bfe-01f33f1d5370/grid_0.png" />
     <img
       className="mt-4"
-      src="https://mj-gallery.com/7e25c002-dc37-463d-9568-8fd00f334d62/grid_0.png"
+      src="https://mj-gallery.com/83c0c1a4-a45d-4601-9bfe-01f33f1d5370/grid_0.png"
     />
   </div>
   <div class="col-span-2 ...">
-    <img src="https://mj-gallery.com/a24f1cd0-bd09-4c9a-9af0-4df31bbf2f6f/grid_0.png" />
+    <img src="https://mj-gallery.com/83c0c1a4-a45d-4601-9bfe-01f33f1d5370/grid_0.png" />
   </div>
-  <div>I wanted this song to be not lame. So I hope it's not lame. Yay.</div>
+  <div>It’s a nice night. She spots a nice sunset from her office window, and a few hours later she gets ready for bed.</div>
 </div>
 
 </div>
