--- a/pages/songs/InterruptSwitch.mdx
+++ b/pages/songs/InterruptSwitch.mdx
@@ -4,32 +4,15 @@
 
 <div class="grid grid-rows-1 grid-flow-col gap-4">
   <div class="row-span-3 gap-2">
-    <img src="https://mj-gallery.com/4b3a3c20-41ba-493f-8f01-24a8d90089e9/grid_0.png" />
-    <img
-      className="mt-4"
-      src="https://mj-gallery.com/57b45fe7-32c6-4523-a423-83aa43da5a9f/grid_0.png"
-    />
-
-    <img
-      className="mt-4"
-      src="https://mj-gallery.com/18f0db30-234f-4be1-8034-e53260564b3e/grid_0.png"
-    />
-
-    <img
-      className="mt-4"
-      src="https://mj-gallery.com/a8801d1b-d57c-4285-ab93-2977defedfbd/grid_0.png"
-    />
-
-    <img
-      className="mt-4"
-      src="https://mj-gallery.com/6b430700-81c2-462f-a19f-5843a77242b8/grid_0.png"
-    />
+    
 
   </div>
   <div class="col-span-2 ...">
-    <img src="https://mj-gallery.com/82e74199-e9f4-49cb-ba28-c20378a0ac2f/grid_0.png" />
+    <img src="https://mj-gallery.com/3cdb8383-bfff-4a30-a2e1-9b1a6242f92d/grid_0.png" />
+    
+    <img src="https://mj-gallery.com/477d2d1a-03e3-4d5a-a60c-590b91956b16/grid_0.png" />
   </div>
-  <div>I wanted this song to be not lame. So I hope it's not lame. Yay.</div>
+  <div>While brushing her teeth and reading her phone, suddenly something goes wrong. Discord gets cut out, her emails stop responding, and even Google goes down. But she still has a connection. What’s up?</div>
 </div>
 
 </div>
