--- a/pages/songs/KeysToTheArmory.mdx
+++ b/pages/songs/KeysToTheArmory.mdx
@@ -17,7 +17,7 @@
   <div class="col-span-2 ...">
     <img src="https://mj-gallery.com/abbf0614-4c86-4f0a-acb8-ecd7eaaf9ea9/grid_0.png" />
   </div>
-  <div>I wanted this song to be not lame. So I hope it's not lame. Yay.</div>
+  <div className="text-yellow-300">Information starts to come in. There’s one large robot and a series of smaller robots, and they seem to be destroying not just buildings but also disabling the internet. Lisa hatches a plan, but doesn’t share it online, sensing that it might help the robots.</div>
 </div>
 
 </div>
