--- a/pages/songs/MaybeThis.mdx
+++ b/pages/songs/MaybeThis.mdx
@@ -3,17 +3,11 @@
 <h2 className="text-2xl font-bold mb-4 text-white">Maybe This</h2>
 
 <div class="grid grid-rows-1 grid-flow-col gap-4">
-  <div class="row-span-3 gap-2">
-    <img src="https://mj-gallery.com/dbc6b847-35f6-4231-9925-934d08fa00c7/grid_0.png" />
-    <img
-      className="mt-4"
-      src="https://mj-gallery.com/7e25c002-dc37-463d-9568-8fd00f334d62/grid_0.png"
-    />
+
+  <div class="col-span-1 ...">
+    <img src="https://mj-gallery.com/e07abc73-c6eb-485a-82a2-cfd007be4482/grid_0.png" />
   </div>
-  <div class="col-span-2 ...">
-    <img src="https://mj-gallery.com/a24f1cd0-bd09-4c9a-9af0-4df31bbf2f6f/grid_0.png" />
-  </div>
-  <div>I wanted this song to be not lame. So I hope it's not lame. Yay.</div>
+  <div>In hindsight, the fight against the massive robot was when things turned around. It was hard, but that’s why we did it.</div>
 </div>
 
 </div>
