--- a/pages/songs/Plodding.mdx
+++ b/pages/songs/Plodding.mdx
@@ -1,6 +1,6 @@
 <div className="m-5 p-5 bg-red-700 rounded-md shadow-sm">
 
-<h2 className="text-2xl font-bold mb-4 text-white">Viewridge</h2>
+<h2 className="text-2xl font-bold mb-4 text-white">Plodding</h2>
 
 <div class="grid grid-rows-1 grid-flow-col gap-4">
   <div class="row-span-3 gap-2">
@@ -13,7 +13,7 @@
   <div class="col-span-2 ...">
     <img src="https://mj-gallery.com/d539bf31-26bd-46e9-8404-2e70a898f69b/grid_0.png" />
   </div>
-  <div className="text-white">Lisa goes to the library to do some research. She has a plan just crazy enough to work.</div>
+  <div className="text-white">Everyone agrees something should be done, but it’s hard to know what. The robots are definitely getting the upper hand.</div>
 </div>
 
 </div>
