--- a/pages/songs/PoolGlare.mdx
+++ b/pages/songs/PoolGlare.mdx
@@ -7,13 +7,13 @@
     <img src="https://mj-gallery.com/14552191-ed17-4683-aa52-30351b03b8f5/grid_0.png" />
     <img
       className="mt-4"
-      src="https://mj-gallery.com/14552191-ed17-4683-aa52-30351b03b8f5/grid_0.png"
+      src="https://mj-gallery.com/1f1e524b-43f2-4141-86ea-7ac73adb66d3/grid_0.png"
     />
   </div>
   <div class="col-span-2 ...">
-    <img src="https://mj-gallery.com/14552191-ed17-4683-aa52-30351b03b8f5/grid_0.png" />
+    <img src="https://mj-gallery.com/58695b1d-8d35-4b0d-8830-6c96d16dd747/grid_0.png" />
   </div>
-  <div>I wanted this song to be not lame. So I hope it's not lame. Yay.</div>
+  <div>Hop onto an online game to do some mindless grinding while talking to friends. Orders a pizza, grabs a beer, settles in for a nice night.</div>
 </div>
 
 </div>
