Trying to fix this damn thing

--- a/pages/songs/ARitualBetweenLightAndDark.mdx
+++ b/pages/songs/ARitualBetweenLightAndDark.mdx
@@ -4,15 +4,15 @@
   A Ritual Between Light and Dark
 </h2>
 
-<div class="grid grid-rows-1 grid-flow-col gap-4">
-  <div class="row-span-3 gap-2">
+<div className="grid grid-rows-1 grid-flow-col gap-4">
+  <div className="row-span-3 gap-2">
     <img src="https://mj-gallery.com/7fa66d74-27c4-4b4b-8742-59e3d8f834ac/grid_0.png" />
     <img
       className="mt-4"
       src="https://mj-gallery.com/1c2a9122-55f9-47e1-9b2f-19577df176db/grid_0.png"
     />
   </div>
-  <div class="col-span-2 ...">
+  <div className="col-span-2 ...">
     <img src="https://mj-gallery.com/50c8ada1-4a9e-41da-9a27-947020225e21/grid_0.png" />
   </div>
   <div className="text-white">Lisa’s theory is that the machines are good at seeing trends and analysing information, so she needs to do something unexpected to fight back.</div>
