--- a/pages/songs/BigFight.mdx
+++ b/pages/songs/BigFight.mdx
@@ -4,8 +4,8 @@
   Big Fight
 </h2>
 
-<div class="grid grid-rows-1 grid-flow-col gap-4">
-  <div class="row-span-3 gap-2">
+<div className="grid grid-rows-1 grid-flow-col gap-4">
+  <div className="row-span-3 gap-2">
    <img src="https://mj-gallery.com/4b3a3c20-41ba-493f-8f01-24a8d90089e9/grid_0.png" />
    <img
      className="mt-4"
@@ -27,7 +27,7 @@
      src="https://mj-gallery.com/6b430700-81c2-462f-a19f-5843a77242b8/grid_0.png"
    />
   </div>
-  <div class="col-span-2 ...">
+  <div className="col-span-2 ...">
     <img src="https://mj-gallery.com/82e74199-e9f4-49cb-ba28-c20378a0ac2f/grid_0.png" />
   </div>
   
