--- a/pages/songs/DestroyedAndroid.mdx
+++ b/pages/songs/DestroyedAndroid.mdx
@@ -2,8 +2,8 @@
 
 <h2 className="text-2xl font-bold mb-4 text-white">Destroyed Android</h2>
 
-<div class="grid grid-rows-1 grid-flow-col gap-4">
-  <div class="row-span-3 gap-2">
+<div className="grid grid-rows-1 grid-flow-col gap-4">
+  <div className="row-span-3 gap-2">
     <img src="https://mj-gallery.com/4a23a215-24b9-4ea9-8d0b-24c4f55e84fc/grid_0.png" />
     <img
       className="mt-4"
@@ -16,7 +16,7 @@
     />
 
   </div>
-  <div class="col-span-2 ...">
+  <div className="col-span-2 ...">
     <img src="https://mj-gallery.com/acf83a2d-e311-4bf6-b552-20360c11f0f5/grid_0.png" />
   </div>
   <div>Lisa finds herself sucked into the robot and does battle from the inside. The robot is clearly confused by the onslaught of contradictory data, but more importantly Lisa finds a way to fight the robot from the inside.</div>
