--- a/pages/songs/InterruptSwitch.mdx
+++ b/pages/songs/InterruptSwitch.mdx
@@ -2,12 +2,12 @@
 
 <h2 className="text-2xl font-bold mb-4 text-white">Interrupt Switch</h2>
 
-<div class="grid grid-rows-1 grid-flow-col gap-4">
-  <div class="row-span-3 gap-2">
+<div className="grid grid-rows-1 grid-flow-col gap-4">
+  <div className="row-span-3 gap-2">
     
 
   </div>
-  <div class="col-span-2 ...">
+  <div className="col-span-2 ...">
     <img src="https://mj-gallery.com/3cdb8383-bfff-4a30-a2e1-9b1a6242f92d/grid_0.png" />
     
     <img src="https://mj-gallery.com/477d2d1a-03e3-4d5a-a60c-590b91956b16/grid_0.png" />
