--- a/pages/songs/PoolGlare.mdx
+++ b/pages/songs/PoolGlare.mdx
@@ -2,15 +2,15 @@
 
 <h2 className="text-2xl font-bold mb-4 text-blue-600">Pool Glare</h2>
 
-<div class="grid grid-rows-1 grid-flow-col gap-4">
-  <div class="row-span-3 gap-2">
+<div className="grid grid-rows-1 grid-flow-col gap-4">
+  <div className="row-span-3 gap-2">
     <img src="https://mj-gallery.com/14552191-ed17-4683-aa52-30351b03b8f5/grid_0.png" />
     <img
       className="mt-4"
       src="https://mj-gallery.com/1f1e524b-43f2-4141-86ea-7ac73adb66d3/grid_0.png"
     />
   </div>
-  <div class="col-span-2 ...">
+  <div className="col-span-2 ...">
     <img src="https://mj-gallery.com/58695b1d-8d35-4b0d-8830-6c96d16dd747/grid_0.png" />
   </div>
   <div>Hop onto an online game to do some mindless grinding while talking to friends. Orders a pizza, grabs a beer, settles in for a nice night.</div>
