--- a/pages/songs/SwaggeringTowardsTheThreat.mdx
+++ b/pages/songs/SwaggeringTowardsTheThreat.mdx
@@ -4,15 +4,15 @@
   Swaggering Towards the Threat
 </h2>
 
-<div class="grid grid-rows-1 grid-flow-col gap-4">
-  <div class="row-span-3 gap-2">
+<div className="grid grid-rows-1 grid-flow-col gap-4">
+  <div className="row-span-3 gap-2">
     <img src="https://mj-gallery.com/52f4ff44-141b-46e7-be29-42d075d581da/grid_0.png" />
     <img
       className="mt-4"
       src="https://mj-gallery.com/c870880d-4c23-4c87-a0d0-7906ae4cda82/grid_0.png"
     />
   </div>
-  <div class="col-span-2 ...">
+  <div className="col-span-2 ...">
     <img src="https://mj-gallery.com/0d478f75-8e24-45de-a26f-16603827b08d/grid_0.png" />
   </div>
   <div>Reports are coming in that there’s a large militarized robot approaching, and it’s jamming the whole internet. It’s terrifying, but also pretty exciting. What is it?</div>
