--- a/pages/songs/WhatPeopleAreSaying.mdx
+++ b/pages/songs/WhatPeopleAreSaying.mdx
@@ -2,9 +2,9 @@
 
 <h2 className="text-2xl font-bold mb-4 text-white">What People Are Saying</h2>
 
-<div class="grid grid-rows-1 grid-flow-col gap-4">
+<div className="grid grid-rows-1 grid-flow-col gap-4">
 
-  <div class="col-span-1 ...">
+  <div className="col-span-1 ...">
     <img src="https://mj-gallery.com/ed67e5e1-4f87-4887-bd92-9e265167ddff/grid_0.png" />
   </div>
   <div>Yup, the robots have been defeated! Happy days! But what are we going to do next? Can we find Lisa?</div>
