--- a/pages/songs/BecauseItWasHard.mdx
+++ b/pages/songs/BecauseItWasHard.mdx
@@ -2,8 +2,8 @@
 
 <h2 className="text-2xl font-bold mb-4 text-white">Because It Was Hard</h2>
 
-<div class="grid grid-rows-1 grid-flow-col gap-4">
-  <div class="row-span-3 gap-2">
+<div className="grid grid-rows-1 grid-flow-col gap-4">
+  <div className="row-span-3 gap-2">
     <img src="https://mj-gallery.com/873fd2eb-03f1-45e4-8155-2b442d23d741/grid_0.png" />
     <img
       className="mt-4"
@@ -15,7 +15,7 @@
       src="https://mj-gallery.com/eb8093e7-e5f2-4188-bd81-7dd826bf952b/grid_0.png"
     />
   </div>
-  <div class="col-span-2 ...">
+  <div className="col-span-2 ...">
     <img src="https://mj-gallery.com/57e2dec9-af84-40db-b646-66aa82c5f71d/grid_0.png" />
   </div>
   <div className="text-blue-200">Chatting online, one of Lisa’s friends points out that concept of “effort justification” explains why hard things can actually feel good. After all, we went to the moon not because it was easy, but because it was hard.</div>
