--- a/pages/songs/DroppingDownIntoTheSky.mdx
+++ b/pages/songs/DroppingDownIntoTheSky.mdx
@@ -4,8 +4,8 @@
   Dropping Down Into the Sky
 </h2>
 
-<div class="grid grid-rows-1 grid-flow-col gap-4">
-  <div class="col-span-1 ...">
+<div className="grid grid-rows-1 grid-flow-col gap-4">
+  <div className="col-span-1 ...">
     <img src="https://mj-gallery.com/9067993c-8b43-4e46-8d58-4dd436dafa61/grid_0.png" />
   </div>
   <div className="text-white">Postscript: humanity undertook a huge project to archive past data better and document it for future generations. From it, we gained a lot of new ideas for how to push things forward, including around space exploration.</div>
