--- a/pages/songs/F12.mdx
+++ b/pages/songs/F12.mdx
@@ -2,15 +2,15 @@
 
 <h2 className="text-2xl font-bold mb-4 text-white">F12</h2>
 
-<div class="grid grid-rows-1 grid-flow-col gap-4">
-  <div class="row-span-3 gap-2">
+<div className="grid grid-rows-1 grid-flow-col gap-4">
+  <div className="row-span-3 gap-2">
     <img src="https://mj-gallery.com/83c0c1a4-a45d-4601-9bfe-01f33f1d5370/grid_0.png" />
     <img
       className="mt-4"
       src="https://mj-gallery.com/83c0c1a4-a45d-4601-9bfe-01f33f1d5370/grid_0.png"
     />
   </div>
-  <div class="col-span-2 ...">
+  <div className="col-span-2 ...">
     <img src="https://mj-gallery.com/83c0c1a4-a45d-4601-9bfe-01f33f1d5370/grid_0.png" />
   </div>
   <div>It’s a nice night. She spots a nice sunset from her office window, and a few hours later she gets ready for bed.</div>
