--- a/pages/songs/Hum.mdx
+++ b/pages/songs/Hum.mdx
@@ -4,15 +4,15 @@
   Hum
 </h2>
 
-<div class="grid grid-rows-1 grid-flow-col gap-4">
-  <div class="row-span-3 gap-2">
+<div className="grid grid-rows-1 grid-flow-col gap-4">
+  <div className="row-span-3 gap-2">
     <img src="https://mj-gallery.com/7c1b8160-e317-4983-b5bb-c78a873bfe1e/grid_0.png" />
     <img
       className="mt-4"
       src="https://mj-gallery.com/1c2a9122-55f9-47e1-9b2f-19577df176db/grid_0.png"
     />
   </div>
-  <div class="col-span-2 ...">
+  <div className="col-span-2 ...">
     <img src="https://mj-gallery.com/d26a7766-54e9-4de7-960b-13e92246a647/grid_0.png" />
   </div>
   <div className="text-white">
