--- a/pages/songs/TakeTheTunnel.mdx
+++ b/pages/songs/TakeTheTunnel.mdx
@@ -2,15 +2,15 @@
 
 <h2 className="text-2xl font-bold mb-4 text-white">Take the Tunnel</h2>
 
-<div class="grid grid-rows-1 grid-flow-col gap-4">
-  <div class="row-span-3 gap-2">
+<div className="grid grid-rows-1 grid-flow-col gap-4">
+  <div className="row-span-3 gap-2">
     <img src="https://mj-gallery.com/dbc6b847-35f6-4231-9925-934d08fa00c7/grid_0.png" />
     <img
       className="mt-4"
       src="https://mj-gallery.com/46936e28-7787-4b9c-bca5-3bcb33758a45/grid_0.png"
     />
   </div>
-  <div class="col-span-2 ...">
+  <div className="col-span-2 ...">
     <img src="https://mj-gallery.com/ecf9100a-56e7-4a89-b6ed-998591cc6bda/grid_0.png" />
   </div>
   <div className="text-white">Lisa left us some final thoughts and ideas. Look to the past. Stand on the shoulders of giants. Reinvention is better when you understand where you came from. PS check the NASA archives. It’s mostly not online.</div>
