--- a/components/songs/F12.mdx
+++ b/components/songs/F12.mdx
@@ -1,19 +1,26 @@
-<div className="m-5 p-5 bg-gray-100 rounded-md shadow-sm">
+<div className="m-5 p-5 bg-gray-100 rounded-md shadow-sm text-orange-500">
 
-<h2 className="text-2xl font-bold mb-4 text-white">F12</h2>
+<h2 className="text-2xl font-bold mb-4">F12</h2>
 
-<div className="grid grid-rows-1 grid-flow-col gap-4">
-  <div className="row-span-3 gap-2">
-    <img src="https://mj-gallery.com/83c0c1a4-a45d-4601-9bfe-01f33f1d5370/grid_0.png" />
-    <img
-      className="mt-4"
-      src="https://mj-gallery.com/83c0c1a4-a45d-4601-9bfe-01f33f1d5370/grid_0.png"
-    />
-  </div>
-  <div className="col-span-2 ...">
-    <img src="https://mj-gallery.com/83c0c1a4-a45d-4601-9bfe-01f33f1d5370/grid_0.png" />
-  </div>
-  <div>It’s a nice night. She spots a nice sunset from her office window, and a few hours later she gets ready for bed.</div>
+<div class="grid grid-cols-2">
+<div>
+  <img className="rounded-tl-xl" src="https://media.discordapp.net/attachments/972020068517019651/1034746475080597504/JonBell_a_beautiful_sunset_outside_an_elegant_apartment_buildin_a2bb04f3-84ce-4ed4-815d-4de5ea2cf8ce.png?width=942&height=942" />
+</div>
+<div>
+    <img className="rounded-tr-xl" src="https://media.discordapp.net/attachments/972020068517019651/1034746475080597504/JonBell_a_beautiful_sunset_outside_an_elegant_apartment_buildin_a2bb04f3-84ce-4ed4-815d-4de5ea2cf8ce.png?width=942&height=942" />
+</div> 
+
+<div>
+  <img src="https://media.discordapp.net/attachments/972020068517019651/1034746475080597504/JonBell_a_beautiful_sunset_outside_an_elegant_apartment_buildin_a2bb04f3-84ce-4ed4-815d-4de5ea2cf8ce.png?width=942&height=942" />
+</div>
+
+<div>
+  <img src="https://media.discordapp.net/attachments/972020068517019651/1034746475080597504/JonBell_a_beautiful_sunset_outside_an_elegant_apartment_buildin_a2bb04f3-84ce-4ed4-815d-4de5ea2cf8ce.png?width=942&height=942" />
+</div>
+  
+  <div className="col-span-2 mt-3">It’s a nice night. She spots a beautiful sunset from her office window, and a few hours later she gets ready for bed.</div>
+  
+  
 </div>
 
 </div>
