--- a/components/songs/GrabASeat.mdx
+++ b/components/songs/GrabASeat.mdx
@@ -2,18 +2,31 @@
 
 <h2 className="text-2xl font-bold mb-4 text-white">Grab a Seat</h2>
 
-<div className="grid grid-rows-1 grid-flow-col gap-4">
-  <div className="row-span-3 gap-2">
-    <img src="https://mj-gallery.com/dbc6b847-35f6-4231-9925-934d08fa00c7/grid_0.png" />
-    <img
-      className="mt-4"
-      src="https://mj-gallery.com/7e25c002-dc37-463d-9568-8fd00f334d62/grid_0.png"
-    />
+<div class="grid grid-cols-2">
+  <div>
+    <img className="rounded-tl-xl" src="https://mj-gallery.com/95641b3e-1bc6-437c-8412-3e2eddbda298/grid_0.png" />
   </div>
-  <div className="col-span-2 ...">
-    <img src="https://mj-gallery.com/a24f1cd0-bd09-4c9a-9af0-4df31bbf2f6f/grid_0.png" />
+  <div>
+      <img className="rounded-tr-xl" src="https://mj-gallery.com/95641b3e-1bc6-437c-8412-3e2eddbda298/grid_0.png" />
+  </div> 
+  
+  <div>
+    <img src="https://mj-gallery.com/95641b3e-1bc6-437c-8412-3e2eddbda298/grid_0.png" />
   </div>
-  <div className="text-white">After a long day at work, Lisa hangs out on Discord with a collection of her internet friends. Chatting about the news, their jobs, swapping some music recommendations.</div>
+  
+  <div>
+    <img src="https://mj-gallery.com/95641b3e-1bc6-437c-8412-3e2eddbda298/grid_0.png" />
+  </div>
+  
+  <div className="col-span-2 text-white mt-3">
+    After a long day at work, Lisa hangs out on Discord with a collection of her internet friends. Chatting about the news, their jobs, swapping some music recommendations.
+  </div>
+ 
+  
 </div>
+
+  
+
+
 
 </div>
