--- a/components/songs/SomethingsUp.mdx
+++ b/components/songs/SomethingsUp.mdx
@@ -1,19 +1,26 @@
-<div className="m-5 p-5 bg-orange-500 rounded-md shadow-sm">
+<div className="m-5 p-5 bg-orange-500 rounded-md shadow-sm text-white">
 
-<h2 className="text-2xl font-bold mb-4 text-white">Something's Up</h2>
+<h2 className="text-2xl font-bold mb-4">Something's Up</h2>
 
-<div className="grid grid-rows-1 grid-flow-col gap-4">
-  <div className="row-span-3 gap-2">
-    <img src="https://mj-gallery.com/6992a85b-7916-4535-9aa4-6a3fd29e5378/grid_0.png" />
-    <img
-      className="mt-4"
-      src="https://mj-gallery.com/c225132a-39df-4039-84ea-d65788197fc4/grid_0.png"
-    />
+
+<div class="grid grid-cols-2">
+  <div>
+    <img className="rounded-tl-xl" src="https://media.discordapp.net/attachments/972020068517019651/1034752772144381952/JonBell_human_connection_through_screens_in_low_fidelity_format_fd84ea99-a228-407b-a2bd-f7f173d5cb3d.png?width=942&height=942" />
   </div>
-  <div className="col-span-2 ...">
-    <img src="https://mj-gallery.com/160320c8-4b44-4c88-b980-d03ca0bac4af/grid_0.png" />
+  <div>
+      <img className="rounded-tr-xl" src="https://media.discordapp.net/attachments/972020068517019651/1034752773830488095/JonBell_human_connection_through_screens_in_low_fidelity_format_950e790a-c380-43be-83da-0cbdfb8b5380.png?width=942&height=942" />
+  </div> 
+  
+  <div>
+    <img src="https://media.discordapp.net/attachments/972020068517019651/1034752776862978099/JonBell_human_connection_through_screens_in_low_fidelity_format_637b5bed-195c-47f0-ba86-52b242e94899.png?width=942&height=942" />
   </div>
-  <div>She has a little website with some forum software. She’s able to connect to it and send an SOS. After a few minutes, she gets a response.</div>
-</div>
-
+  
+  <div>
+    <img src="https://media.discordapp.net/attachments/972020068517019651/1034753043419369482/JonBell_human_connection_through_screens_in_low_fidelity_format_4b61af8e-c869-4a02-aef7-a77da005afc5.png?width=942&height=942" />
+  </div>
+  
+  <div className="col-span-2 mt-3">She has a little website with some forum software. She’s able to connect to it and send an SOS. After a few minutes, she gets a response.</div>
+  </div>
+ 
+  
 </div>
