--- a/components/songs/SwaggeringTowardsTheThreat.mdx
+++ b/components/songs/SwaggeringTowardsTheThreat.mdx
@@ -1,21 +1,30 @@
-<div className="m-5 p-5 bg-blue-200 rounded-md shadow-sm">
+<div className="m-5 p-5 bg-blue-900 rounded-md shadow-sm text-blue-100">
 
-<h2 className="text-2xl font-bold mb-4 text-white">
+<h2 className="text-2xl font-bold mb-4">
   Swaggering Towards the Threat
 </h2>
 
-<div className="grid grid-rows-1 grid-flow-col gap-4">
-  <div className="row-span-3 gap-2">
-    <img src="https://mj-gallery.com/52f4ff44-141b-46e7-be29-42d075d581da/grid_0.png" />
-    <img
-      className="mt-4"
-      src="https://mj-gallery.com/c870880d-4c23-4c87-a0d0-7906ae4cda82/grid_0.png"
-    />
+<div class="grid grid-cols-2">
+  <div>
+    <img className="rounded-tl-xl" src="https://media.discordapp.net/attachments/972020068517019651/1034755116831604767/JonBell_city_with_a_lurking_robot_in_low_resolution_VGA_style_9bd8dd17-2317-42af-a8b1-1496fbb9eafe.png?width=942&height=942" />
   </div>
-  <div className="col-span-2 ...">
-    <img src="https://mj-gallery.com/0d478f75-8e24-45de-a26f-16603827b08d/grid_0.png" />
+  <div>
+      <img className="rounded-tr-xl" src="https://media.discordapp.net/attachments/972020068517019651/1034755116831604767/JonBell_city_with_a_lurking_robot_in_low_resolution_VGA_style_9bd8dd17-2317-42af-a8b1-1496fbb9eafe.png?width=942&height=942" />
+  </div> 
+  
+  <div>
+    <img src="https://media.discordapp.net/attachments/972020068517019651/1034755116831604767/JonBell_city_with_a_lurking_robot_in_low_resolution_VGA_style_9bd8dd17-2317-42af-a8b1-1496fbb9eafe.png?width=942&height=942" />
   </div>
-  <div>Reports are coming in that there’s a large militarized robot approaching, and it’s jamming the whole internet. It’s terrifying, but also pretty exciting. What is it?</div>
+  
+  <div>
+    <img src="https://media.discordapp.net/attachments/972020068517019651/1034755116831604767/JonBell_city_with_a_lurking_robot_in_low_resolution_VGA_style_9bd8dd17-2317-42af-a8b1-1496fbb9eafe.png?width=942&height=942" />
+  </div>
+  
+  <div className="col-span-2 mt-3">Reports are coming in that there’s a large militarized robot approaching, and it’s jamming the whole internet. It’s terrifying, but also pretty exciting. What is it?</div>
+  </div>
+ 
+  
 </div>
 
-</div>
+
+
