--- a/components/songs/InterruptSwitch.mdx
+++ b/components/songs/InterruptSwitch.mdx
@@ -1,18 +1,30 @@
-<div className="m-5 p-5 bg-blue-100 rounded-md shadow-sm">
+<div className="m-5 p-5 bg-blue-100 rounded-md shadow-sm text-purple-800">
 
-<h2 className="text-2xl font-bold mb-4 text-white">Interrupt Switch</h2>
+<h2 className="text-2xl font-bold mb-4">Interrupt Switch</h2>
 
-<div className="grid grid-rows-1 grid-flow-col gap-4">
-  <div className="row-span-3 gap-2">
-    
+<div className="grid grid-cols-2">
+<div>
+  <img className="rounded-tl-xl" src="https://media.discordapp.net/attachments/972020068517019651/1034748013459034153/JonBell_a_screen_with_a_glitch_on_it_in_the_style_of_nintendo_g_e051634c-2ea8-499e-9e90-3db86413e5f1.png?width=942&height=942 " />
+</div>
+<div>
+    <img className="rounded-tr-xl" src="https://media.discordapp.net/attachments/972020068517019651/1034748013459034153/JonBell_a_screen_with_a_glitch_on_it_in_the_style_of_nintendo_g_e051634c-2ea8-499e-9e90-3db86413e5f1.png?width=942&height=942 " />
+</div> 
 
-  </div>
-  <div className="col-span-2 ...">
-    <img src="https://mj-gallery.com/3cdb8383-bfff-4a30-a2e1-9b1a6242f92d/grid_0.png" />
-    
-    <img src="https://mj-gallery.com/477d2d1a-03e3-4d5a-a60c-590b91956b16/grid_0.png" />
-  </div>
-  <div>While brushing her teeth and reading her phone, suddenly something goes wrong. Discord gets cut out, her emails stop responding, and even Google goes down. But she still has a connection. What’s up?</div>
+<div>
+  <img src="https://media.discordapp.net/attachments/972020068517019651/1034748013459034153/JonBell_a_screen_with_a_glitch_on_it_in_the_style_of_nintendo_g_e051634c-2ea8-499e-9e90-3db86413e5f1.png?width=942&height=942 " />
+</div>
+
+<div>
+  <img src="https://media.discordapp.net/attachments/972020068517019651/1034748013459034153/JonBell_a_screen_with_a_glitch_on_it_in_the_style_of_nintendo_g_e051634c-2ea8-499e-9e90-3db86413e5f1.png?width=942&height=942 " />
+</div>
+  
+  <div className="col-span-2 mt-3">While brushing her teeth and reading her phone, suddenly something goes wrong. Discord gets cut out, her emails stop responding, and even Google goes down. But she still has a connection. What’s up?</div>
+  
+  
 </div>
 
 </div>
+
+
+
+
