--- a/components/songs/PoolGlare.mdx
+++ b/components/songs/PoolGlare.mdx
@@ -1,19 +1,25 @@
 <div className="m-5 p-5 bg-yellow-300 rounded-md shadow-sm">
 
-<h2 className="text-2xl font-bold mb-4 text-blue-600">Pool Glare</h2>
+<h2 className="text-2xl font-bold mb-4 text-blue-600">Happy Grind</h2>
 
-<div className="grid grid-rows-1 grid-flow-col gap-4">
-  <div className="row-span-3 gap-2">
-    <img src="https://mj-gallery.com/14552191-ed17-4683-aa52-30351b03b8f5/grid_0.png" />
-    <img
-      className="mt-4"
-      src="https://mj-gallery.com/1f1e524b-43f2-4141-86ea-7ac73adb66d3/grid_0.png"
-    />
+<div class="grid grid-cols-2">
+  <div>
+    <img className="rounded-tl-xl" src="https://media.discordapp.net/attachments/972020068517019651/1034744225939599370/JonBell_a_video_game_low_res_VGA_80s_bcd57a45-cfb9-4834-a5bb-25c9542e9993.png?width=942&height=942" />
   </div>
-  <div className="col-span-2 ...">
-    <img src="https://mj-gallery.com/58695b1d-8d35-4b0d-8830-6c96d16dd747/grid_0.png" />
+  <div>
+      <img className="rounded-tr-xl" src="https://media.discordapp.net/attachments/972020068517019651/1034744225939599370/JonBell_a_video_game_low_res_VGA_80s_bcd57a45-cfb9-4834-a5bb-25c9542e9993.png?width=942&height=942" />
+  </div> 
+  
+  <div>
+    <img src="https://media.discordapp.net/attachments/972020068517019651/1034744225939599370/JonBell_a_video_game_low_res_VGA_80s_bcd57a45-cfb9-4834-a5bb-25c9542e9993.png?width=942&height=942" />
   </div>
-  <div>Hop onto an online game to do some mindless grinding while talking to friends. Orders a pizza, grabs a beer, settles in for a nice night.</div>
+  
+  <div>
+    <img src="https://media.discordapp.net/attachments/972020068517019651/1034744225939599370/JonBell_a_video_game_low_res_VGA_80s_bcd57a45-cfb9-4834-a5bb-25c9542e9993.png?width=942&height=942" />
+  </div>
+  
+  <div className="col-span-2 text-blue-800 mt-3">Lisa hops onto an online game to do some mindless grinding while talking to friends. She orders a pizza, grabs a beer, settles in for a nice night.</div>
 </div>
-
+  
 </div>
+  
