--- a/components/songs/SwaggeringTowardsTheThreat.mdx
+++ b/components/songs/SwaggeringTowardsTheThreat.mdx
@@ -1,7 +1,7 @@
 <div className="m-5 p-5 bg-blue-900 rounded-md shadow-sm text-blue-100">
 
 <h2 className="text-2xl font-bold mb-4">
-  Swaggering Towards the Threat
+  Here They Come
 </h2>
 
 <div class="grid grid-cols-2">
