--- a/components/songs/Viewridge.mdx
+++ b/components/songs/Viewridge.mdx
@@ -1,6 +1,6 @@
 <div className="m-5 p-5 bg-red-700 rounded-md shadow-sm">
 
-<h2 className="text-2xl font-bold mb-4 text-white">Viewridge</h2>
+<h2 className="text-2xl font-bold mb-4 text-white">I Guess Now We Fight?</h2>
 
 <div className="grid grid-rows-1 grid-flow-col gap-4">
   <div className="row-span-3 gap-2">
