--- a/components/songs/Hum.mdx
+++ b/components/songs/Hum.mdx
@@ -1,7 +1,7 @@
 <div className="m-5 p-5 bg-black rounded-md shadow-sm">
 
 <h2 className="text-2xl font-bold mb-4 text-white">
-  Hum
+  At Least She Left a Note
 </h2>
 
 <div className="grid grid-rows-1 grid-flow-col gap-4">
