--- a/components/songs/IfRobotsHadLungs.mdx
+++ b/components/songs/IfRobotsHadLungs.mdx
@@ -1,6 +1,6 @@
 <div className="m-5 p-5 bg-orange-800 rounded-md shadow-sm">
 
-<h2 className="text-2xl font-bold mb-4 text-white">If Robots Had Lungs</h2>
+<h2 className="text-2xl font-bold mb-4 text-white">First Contact</h2>
 
 <div className="grid grid-rows-1 grid-flow-col gap-4">
   <div className="row-span-3 gap-2">
