--- a/components/songs/WhatPeopleAreSaying.mdx
+++ b/components/songs/WhatPeopleAreSaying.mdx
@@ -1,6 +1,6 @@
 <div className="m-5 p-5 bg-blue-300 rounded-md shadow-sm">
 
-<h2 className="text-2xl font-bold mb-4 text-white">What People Are Saying</h2>
+<h2 className="text-2xl font-bold mb-4 text-white">We Won! Right?</h2>
 
 <div className="grid grid-rows-1 grid-flow-col gap-4">
 
