--- a/components/songs/PoolGlare.mdx
+++ b/components/songs/PoolGlare.mdx
@@ -2,7 +2,7 @@
 
 <h2 className="text-2xl font-bold mb-4 text-blue-600">Happy Grind</h2>
 
-<div class="grid grid-cols-2">
+<div className="grid grid-cols-2">
   <div>
     <img className="rounded-tl-xl" src="https://media.discordapp.net/attachments/972020068517019651/1034744225939599370/JonBell_a_video_game_low_res_VGA_80s_bcd57a45-cfb9-4834-a5bb-25c9542e9993.png?width=942&height=942" />
   </div>
