--- a/components/songs/SomethingsUp.mdx
+++ b/components/songs/SomethingsUp.mdx
@@ -3,7 +3,7 @@
 <h2 className="text-2xl font-bold mb-4">Something's Up</h2>
 
 
-<div class="grid grid-cols-2">
+<div className="grid grid-cols-2">
   <div>
     <img className="rounded-tl-xl" src="https://media.discordapp.net/attachments/972020068517019651/1034752772144381952/JonBell_human_connection_through_screens_in_low_fidelity_format_fd84ea99-a228-407b-a2bd-f7f173d5cb3d.png?width=942&height=942" />
   </div>
