--- a/components/songs/SwaggeringTowardsTheThreat.mdx
+++ b/components/songs/SwaggeringTowardsTheThreat.mdx
@@ -4,7 +4,7 @@
   Here They Come
 </h2>
 
-<div class="grid grid-cols-2">
+<div className="grid grid-cols-2">
   <div>
     <img className="rounded-tl-xl" src="https://media.discordapp.net/attachments/972020068517019651/1034755116831604767/JonBell_city_with_a_lurking_robot_in_low_resolution_VGA_style_9bd8dd17-2317-42af-a8b1-1496fbb9eafe.png?width=942&height=942" />
   </div>
