--- a/components/songs/F12.mdx
+++ b/components/songs/F12.mdx
@@ -2,7 +2,7 @@
 
 <h2 className="text-2xl font-bold mb-4">F12</h2>
 
-<div class="grid grid-cols-2">
+<div className="grid grid-cols-2">
 <div>
   <img className="rounded-tl-xl" src="https://media.discordapp.net/attachments/972020068517019651/1034746475080597504/JonBell_a_beautiful_sunset_outside_an_elegant_apartment_buildin_a2bb04f3-84ce-4ed4-815d-4de5ea2cf8ce.png?width=942&height=942" />
 </div>
